Ask download manager to remove a download if it is overwritten by another

When a downloaded file is overwritten by another,
we should ask DownloadManager to check for externally removed files.

BUG=647042

Review-Url: https://codereview.chromium.org/2344483003
Cr-Commit-Position: refs/heads/master@{#420381}

Former-commit-id: db0d8c5689f4a4d9150ee42f181ef2f9f5af17bc