chrome/browser/android/download/download_manager_service.h
@@ -11,7 +11,9 @@
 
 #include "base/android/scoped_java_ref.h"
 #include "base/callback.h"
+#include "base/files/file_path.h"
 #include "base/macros.h"
+#include "base/memory/singleton.h"
 #include "chrome/browser/android/download/download_controller.h"
 #include "chrome/browser/download/all_download_item_notifier.h"
 #include "chrome/browser/download/download_history.h"
@@ -35,9 +37,13 @@ class DownloadManagerService : public AllDownloadItemNotifier::Observer,
       content::DownloadItem* download,
       DownloadController::DownloadCancelReason reason);
 
-  DownloadManagerService(JNIEnv* env,
-                         jobject jobj);
+  static DownloadManagerService* GetInstance();
+
+  DownloadManagerService();
   ~DownloadManagerService() override;
+
+  // Called to Initialize this object.
+  void Init(JNIEnv* env, jobject obj);
 
   // Called to resume downloading the item that has GUID equal to
   // |jdownload_guid|..
@@ -85,6 +91,9 @@ class DownloadManagerService : public AllDownloadItemNotifier::Observer,
                                           const JavaParamRef<jobject>& obj,
                                           bool is_off_the_record);
 
+  // Remove download items associated with |path| from downloads history.
+  void RemoveDownloadsForPath(const base::FilePath& path);
+
   // DownloadHistory::Observer methods.
   void OnHistoryQueryComplete() override;
 
@@ -101,6 +110,7 @@ class DownloadManagerService : public AllDownloadItemNotifier::Observer,
  private:
   // For testing.
   friend class DownloadManagerServiceTest;
+  friend struct base::DefaultSingletonTraits<DownloadManagerService>;
 
   // Helper function to start the download resumption.
   void ResumeDownloadInternal(const std::string& download_guid,
